syntax = "proto3";

package employeePackage;

message Employee {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string bagdeNumber = 4;
    string department = 5;
}

// Empty function to be passed into the rpc funcion name
// since proto buffer doesn't allow an empty function
message GetAllRequest {}

message GetByBadgeNumberRequest {
    int32 badgeNumber = 1;
}

message AddPhotoRequest {
    bytes data = 1;
}

message AddPhotoResponse {
    bool isOK = 1;
}

message EmployeeRequest {
    Employee employee = 1;
}

message EmployeeResponse {
    repeated Employee employee = 1;
}

service EmployeeService {
    rpc GetByBadgeNumber(GetByBadgeNumberRequest) returns (EmployeeResponse);
    rpc GetAll(GetAllRequest) returns (stream EmployeeResponse);
    rpc Save(EmployeeRequest) returns (EmployeeResponse);
    rpc SaveAll(stream EmployeeRequest) returns (stream EmployeeResponse);
    rpc AddPhoto(stream AddPhotoRequest) returns (AddPhotoResponse);
}